[*] championship forecast serialization issues [+] added e2e tests